Make START button create random numbers for guitar fret positions.
Assume frets are from 0 to 12.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="start">START</string>
     <string name="submit">SUBMIT</string>
     <string name="score">SCORE:</string>
+    <string name="fret">0</string>
 </resources>
